# OMEGARESPONSE-

./: .env.example  .gitignore  Dockerfile  README.md  blog.md  episode_runner.py  inference.py  openenv.yaml  prompts_dataset.jsonl  pyproject.toml  requirements.txt  rule_based_agent.py  verify_all.py
app/: agents.py  environment.py  main.py  negotiation.py  rewards.py
server/: app.py
training/: grpo_train.ipynb
