[project]
name = "omega-response"
version = "0.1.0"
description = "OmegaResponse environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core==0.2.3",
    "fastmcp==3.2.0",
    "fastapi>=0.115.0",
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "openai>=1.50.0",
    "groq>=0.11.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.2.0",
    "typing_extensions>=4.15.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
server = "server.app:main"
